Falta validacion de reglas (Rubrica) y validacion de credenciales antes del inicio del juego

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
           "*.excalidraw": "json",
           "*.excalidrawlib": "json",
           "ostream": "cpp",
-          "random": "cpp"
+          "random": "cpp",
+          "iostream": "cpp"
      }
 }
